--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vercel/edge-config": "^0.2.1",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
+    "crypto": "^1.0.1",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.2",
