--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "@vercel/analytics": "^1.0.2",
     "@vercel/edge-config": "^0.2.1",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
+    "contentlayer2": "^0.4.6",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.2",
     "googleapis": "^126.0.1",
     "kysely": "^0.26.3",
     "kysely-planetscale": "^1.4.0",
-    "next": "^13.5.6",
-    "next-auth": "0.0.0-manual.83c4ebd1",
-    "next-contentlayer": "^0.3.4",
+    "next": "^14.2.26",
+    "next-auth": "^4.24.11",
+    "next-contentlayer2": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
